quiz apply form improvements 3 list leftgap hide_on_print

--- a/src/main/webapp/quiz/quiz_applying.html
+++ b/src/main/webapp/quiz/quiz_applying.html
@@ -508,7 +508,7 @@
             <div>
                 <span id='labelparagraph' class='label-paragraph'><p><b></b></p></span>
                 <label for="obs" style='color:black; font-weight: bold; float:left; padding-right:20px' >esq ini</label>
-                <span id="leftgap" class="left-gap" style='float:left; padding-right:145px' >.</span>
+                <span id="leftgap" class="left-gap hide_on_print" style='float:left; padding-right:145px' >.</span>
 
                 <div class="input-prepend" style='float:left; padding-right:10px'>
                     <span id='labeltop' class="label-top">uai meio</span>
