--- a/src/main/webapp/quiz_admin/edit_question.html
+++ b/src/main/webapp/quiz_admin/edit_question.html
@@ -79,10 +79,19 @@
           <div class="clearfix">
             <label for="addon" >AddOn</label>
             <div class="input">
-              <div class="input-prepend">
+              <div class='inline-inputs'>
+              <div class="input-prepend" style='float:left; padding-right:10px'>
                 <span class="add-on">+</span> 
                 <input class="mini" id="addon" name="addon" size="30" type="text"/>
                 <span class="help-block"></span>
+              </div>
+              <div class="input-prepend" style='float:left; padding-right:10px'>
+                <span class='label-inline'>
+                    Sufixo
+                </span>
+                <input class="mini" id="sufix" name="sufix" size="30" type="text"/>
+                <span class="help-block"></span>
+              </div>
               </div>
             </div>
           </div>                
