project event group budget - edit and list - opt fix - with no ajax

--- a/src/main/webapp/project_group/group.html
+++ b/src/main/webapp/project_group/group.html
@@ -23,7 +23,8 @@
   </script>
   <script src="/js/angular.select2.js"></script>
   <span class='lift:ProjectSnippet.maintain opt=group'>
-    <form  class="lift:form.ajax">
+    <form> <!-- tirei o ajax para pegara url
+      class="lift:form.ajax"-->
       <div class="well">
         <label for="btn"></label>
         <a class="btn primary" href="/project_group/list_group?opt=group">Lista</a>
