--- a/src/main/webapp/budget/budget.html
+++ b/src/main/webapp/budget/budget.html
@@ -27,7 +27,8 @@
   </script>
   <script src="/js/angular.select2.js"></script>
   <span class=' lift:ProjectSnippet.maintain'>
-    <form  class="lift:form.ajax">
+    <form> <!-- tirei o ajax para pegara url
+      class="lift:form.ajax"-->
       <div class="well">
         <label for="btn"></label>
         <a class="btn primary" href="/budget/list_budget?opt=budget">Lista</a>
