--- a/src/main/webapp/project/project.html
+++ b/src/main/webapp/project/project.html
@@ -16,7 +16,8 @@
   </script>
   <script src="/js/angular.select2.js"></script>
   <span class=' lift:ProjectSnippet.maintain'>
-    <form  class="lift:form.ajax">
+    <form> <!-- tirei o ajax para pegara url
+      class="lift:form.ajax"-->
       <div class="well">
         <label for="btn"></label>
         <a class="btn primary" href="/project/list_event">Lista</a>
