bprelationship pre fix

--- a/src/main/webapp/bprelationship/bprelationship.html
+++ b/src/main/webapp/bprelationship/bprelationship.html
@@ -2,10 +2,12 @@
   <script type="text/javascript" charset="utf-8">
     setTimeout(function(){
       if($("#business_pattern").val() && $("#business_pattern").val() != '0'){
+        //alert ("vaii change " + $("#business_pattern").val())
         $("#business_pattern").change();
       }
       setTimeout(function(){
         if($("#bp_related").val() && $("#bp_related").val() != '0'){
+          //alert ("vaii relac change " + $("#bp_related").val())
           $("#bp_related").change();
         }
       },500);
