prof report - ignoring useractivite commission if use product comission 2

--- a/src/main/webapp/customer/services_executors.html
+++ b/src/main/webapp/customer/services_executors.html
@@ -149,10 +149,10 @@
         <th>D Prof</th>
         <th>Preço</th>
         <th>P Prof</th>
-        <th>Comissão</th>
-        <th>C Prof</th>
-        <th>Com Abs</th>
-        <th>C A Prof</th>
+        <th title='Comissão % do serviço/produto'>Comissão</th>
+        <th title='Comissão % específica para este profissional'>C Prof</th>
+        <th title='Comissão em valor absoluto do serviço/produto'>Com Abs</th>
+        <th title='Comissão em valor absoluto específica para este profissional'>C A Prof</th>
         <th><span data-i18n='Profissional'></span></th>
         <th><a title='Auditoria' href='#' ><img width='24px' src='/images/audit.png'/></a></th>
       </thead>
