--- a/src/main/webapp/treatments_conferenc.html
+++ b/src/main/webapp/treatments_conferenc.html
@@ -90,6 +90,12 @@
             </div>
             <div class="span7">
               <div class="clearfix">
+                <label for="category_select">Tipos</label>
+                <div class="input">
+                  <select id="category_select" class="category_select url_parameter" name="category_select"></select>
+                </div>
+              </div>
+              <div class="clearfix">
                 <label for="activity">
                   Serviço
                 </label>
