--- a/src/main/webapp/treatments_conferenc.html
+++ b/src/main/webapp/treatments_conferenc.html
@@ -192,6 +192,10 @@
                   <span class="add-on"><img src="/images/money.png" width="16"></span>
                   <input style="color:black;" class="small disabled" id="total" name="total" size="19" placeholder="0.00" type="text" disabled='true'>
                 </div>
+                <div class="input-prepend" style="float:left; padding-right:10px">
+                  <span class="add-on"><img src="/images/duration.png" width="16"></span>
+                  <input style="color:black;" class="small disabled" id="hours" name="hours" size="19" placeholder="0:00" type="text" disabled='true'>
+                </div>
               </div>
             </div>
           </div>
