order 10 project section - customer history add minutes bug fix

--- a/src/main/webapp/budget/budget.html
+++ b/src/main/webapp/budget/budget.html
@@ -387,7 +387,7 @@
                 <div class="clearfix">
                     <label for="text">Ordem</label>
                     <div class="input">
-                        <input class="mini" id="sections_orderInReport" size="30" type="number"/>
+                        <input class="mini" id="sections_orderInReport" size="30" type="number" value='1000'/>
                     </div>
                 </div>
                 <div class="clearfix">
