--- a/src/main/webapp/customer/edit.html
+++ b/src/main/webapp/customer/edit.html
@@ -762,6 +762,7 @@
                     <th>Comanda</th>
                     <th>Caixa</th>
                     <th>Id Atend</th>
+                    <th><a title='Auditoria' href='#' ><img width='24px' src='/images/audit.png'/></a></th>
                 </thead>
                 <tbody>
                 </tbody>
