--- a/src/main/webapp/quiz_admin/quiz.html
+++ b/src/main/webapp/quiz_admin/quiz.html
@@ -89,7 +89,7 @@
         <label class="hide_mobile" for="btn"></label>
         <a class="btn primary" href="/quiz/list">Lista</a>
         <input class="btn success" type="submit" value="Salvar">
-        <a class="btn primary" href="/quiz/quiz">Inserir novo</a>
+        <a class="btn primary" href="/quiz_admin/quiz">Inserir novo</a>
       </div>
     </form>
     <script>
