unit calpuburl - company help

--- a/src/main/webapp/company_log/edit.html
+++ b/src/main/webapp/company_log/edit.html
@@ -319,7 +319,7 @@
 			                    <div class="input-prepend">
 			                        <input class="xlarge" id="calendarUrl" name="calendarUrl" size="16" type="text">
 			                    </div>
-				              <span class="help-block">Para acessar a agenda ebelle.com.br/agenda.html/complemento</span>
+				              <span class="help-block">Para acessar a agenda ebelle.com.br/agenda.html?id=complemento</span>
 			                </div>
 			            </div>
 				    </div>
