--- a/src/main/webapp/unit/edit.html
+++ b/src/main/webapp/unit/edit.html
@@ -118,6 +118,15 @@
                   </div>
               </div>
           </div>
+          <div class="clearfix">
+              <label for="calendarUrl">Compl url agenda</label>
+              <div class="input">
+                  <div class="input-prepend">
+                      <input class="xlarge" id="calendarUrl" name="calendarUrl" size="16" type="text">
+                  </div>
+              <span class="help-block">Para acessar a agenda ebelle.com.br/agenda.html?id=urlempresa&unit=complemento</span>
+              </div>
+          </div>
       </div>
       <div class="well">
         <label for="btn"></label>
