--- a/src/main/webapp/manager/upload_cnab_file.html
+++ b/src/main/webapp/manager/upload_cnab_file.html
@@ -1,4 +1,4 @@
-<div id="main" class="lift:surround?with=financial;at=content">
+<div id="main" class="lift:surround?with=bootstrap;at=content">
 <h3>
 	<center>Cnab 240 Boletos Pagos</center>
 </h3>
