quiz question print control - edit

--- a/src/main/webapp/quiz_admin/edit_question.html
+++ b/src/main/webapp/quiz_admin/edit_question.html
@@ -53,8 +53,18 @@
           <div class="clearfix">
             <label for="quizDomain">Domínio</label>
             <div class="input">
-              <select id='quizDomain' class="xlarge" name='quizDomain'></select>
-              <span class="help-block">Domínio para resposta</span>
+              <div class='inline-inputs'>
+                <div class="input-prepend" style='float:left; padding-right:10px'>
+                  <select id='quizDomain' class="xlarge" name='quizDomain'></select>
+                  <span class="help-block">Domínio para resposta</span>
+                </div>
+                <div class="input-prepend" style='float:left; padding-right:10px'>
+                  <span class='label-inline'>
+                      Ctrl Impressão
+                  </span>
+                  <select id='printControl' class="large" name='printControl'></select>
+                </div>
+              </div>
             </div>
           </div>
           <div class="clearfix">
