--- a/src/main/webapp/quiz_admin/edit_section.html
+++ b/src/main/webapp/quiz_admin/edit_section.html
@@ -40,6 +40,18 @@
             </div>
           </div>
           <div class="clearfix">
+            <label for="quizSectionFormat">Formato Seção</label>
+            <div class="input">
+              <div class='inline-inputs'>
+                <div class="input-prepend" style='float:left; padding-right:10px'>
+                  <select class="large" id="quizSectionFormat" name="quizSectionFormat" >
+                  </select>
+              <span class="help-block">Apenas "Longo Topo" e "Nenhum Label" estão implementados</span>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="clearfix">
             <label for="rank" >Pontos</label>
             <div class="input">
               <div class="input-prepend">
